--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "predeploy": "nuxt build && nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=main --cleanup"
   },
   "dependencies": {
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "push-dir": "^0.4.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.7",
