--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "core-js": "^3.15.1",
+    "normalize.css": "^8.0.1",
     "nuxt": "^2.15.7",
     "push-dir": "^0.4.1"
   },
