--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "predeploy": "nuxt build && nuxt generate",
-    "deploy": "push-dir --dir=dist --branch=main --cleanup"
+    "deploy": "push-dir --dir=dist --branch=main --allow-unrelated-histories --cleanup"
   },
   "dependencies": {
     "core-js": "^3.15.1",
