--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "predeploy": "nuxt build && nuxt generate",
-    "deploy": "push-dir --dir=dist --branch=main --allow-unrelated-histories --cleanup"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.15.1",
+    "gh-pages": "^3.2.3",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.15.7",
     "push-dir": "^0.4.1"
