--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
+    "axios": "^0.21.1",
     "core-js": "^3.15.1",
     "gh-pages": "^3.2.3",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.15.7",
-    "push-dir": "^0.4.1"
+    "push-dir": "^0.4.1",
+    "vue-axios": "^3.2.5"
   },
   "devDependencies": {
     "@nuxt/image": "^0.5.0",
