--- a/static/.htaccess
+++ b/static/.htaccess
@@ -4,4 +4,7 @@ RewriteEngine on
 RewriteCond %{HTTPS} off
 RewriteCond %{HTTP_HOST} (www\.)?cursoscaduceu.com.br
 RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+Header add Access-Control-Allow-Origin "*"
+Header add Access-Control-Allow-Headers "origin, x-requested-with, content-type"
+Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
 # DO NOT REMOVE THIS LINE AND THE LINES BELLOW SSL_REDIRECT:cursoscaduceu.com.br
