--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "types": [
       "@nuxt/types",
       "@types/node",
-      "@nuxt/image"
+      "@nuxt/image",
+      "@nuxtjs/axios"
     ]
   },
   "exclude": [
